# ad-bot

./: .gitignore  README.md  pyproject.toml
admin/: entrypoint.sh
admin/admin/: settings.py
admin/admin/templates/: s3_change_form.html
admin/bot/: admin.py  models.py  s3.py
admin/bot/migrations/: 0001_initial.py
deploy/: admin.dockerfile  bot.dockerfile  docker-compose.yml
deploy/config/: .env.sample  nginx.conf
deploy/init/: createbucket.sh
src/: alembic.ini  app.py  entrypoint.sh
src/config/: bot.py  database.py  redis.py  s3.py
src/controller/: dispatcher.py  filters.py
src/controller/routers/: main.py  register.py
src/database/: session.py
src/database/entity/: __init__.py  announcement.py  base.py  rule.py  team.py  user.py  vpn_config.py  vulnbox.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2024_04_09_initialize_tables.py
src/services/admin/: announcement.py
src/services/user/: announcement.py  main.py
src/views/: register.py
src/views/admin/: register.py
src/views/admin/announcement/: dialog.py  state.py  window.py
src/views/admin/main/: dialog.py  state.py  window.py
src/views/templates/: announcement.j2  announcements.j2  rules.j2  vulnboxes.j2
src/views/user/: register.py
src/views/user/announcement/: dialog.py  state.py  window.py
src/views/user/main/: dialog.py  state.py  window.py
