[tool.poetry]
name = "ad-bot"
version = "0.1.0"
description = "Attack-Defence telegram bot"
authors = ["Ivan Krasnopolsky <i1.krasnopolskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram-dialog = "^2.1.0"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
mysqlclient = "^2.2.4"
boto3 = "^1.34.79"
django = "^5.0.4"
django-environ = "^0.11.2"
gunicorn = "^21.2.0"
redis = "^5.0.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '(\.git|\.cache|\.venv|\.idea|__pycache__)'
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
skip = ["**/__pycache__/**", ".cache", ".j2", ".git", ".idea", ".venv"]
